5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1734_2505.log
== TEST (2019-05-16 17:56:36) 
-- CODE:
x=eval(input(" digite o angulo"))
k=int(input(" digite o termo"))
soma=0
i=0
b=1
from math import *
while(i<k):
	sinal=(-1)**i
	soma=soma+sinal*(x**b/factorial(b))
	i=i+1
	b=b+2
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:53) 
-- CODE:
x=eval(input(" digite o angulo"))
k=int(input(" digite o termo"))
soma=0
i=0
b=1
from math import *
while(i<k):
	sinal=(-1)**i
	soma=soma+sinal*(x**b/factorial(b))
	i=i+1
	b=b+2
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:35) 
-- CODE:
x=eval(input("digite o angulo"))
k=int(input("digite o termo"))
soma=0
i=0
b=1
from math import *
while(i<k):
	sinal=(-1)**i
	soma=soma+sinal*(x**b/factorial(b))
	i=i+1
	b=b+2
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:56) 
-- CODE:
from math import *
x=eval(input("digite o angulo"))
k=int(input("digite o termo"))
soma=0
i=0
b=1

while(i<k):
	sinal=(-1)**i
	soma=soma+sinal*(x**b/factorial(b))
	i=i+1
	b=b+2
print(round(soma,10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:16) 
-- CODE:
from math import *
x=eval(input("digite o angulo"))
k=int(input("digite o termo"))
soma=0
i=0
b=1

while(i<k):
	sinal=(-1)**i
	soma=soma+sinal*(x**b/factorial(b))
	i=i+1
	b=b+2
print(round(soma,10))
-- EXECUTION TIME:
0.226247
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
